service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codbex-athena
  labels:
    app: codbex-athena
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: codbex-athena
  type: ClusterIP
