ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codbex-athena
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: dev.athena.eu1.codbex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codbex-athena
                port:
                  number: 80
